# blinear

./: .gitignore  CMakeLists.txt  README.md
parameter/default/: black
src/: collection.h  main.cpp
src/header/: ball.h  blinear.cpp  blinear.h  commandline.cpp  commandline.h  cube.cpp  cube.h
src/header/util/: error.cpp  error.h  util.h
